--- a/src/hepattn/experiments/trackml/configs/filtering.yaml
+++ b/src/hepattn/experiments/trackml/configs/filtering.yaml
@@ -1,10 +1,13 @@
 seed_everything: 42
 name: HC-v3
+ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694.ckpt
 
 data:
-  train_dir: /share/rcifdata/maxhart/data/trackml/prepped/train/
-  val_dir: /share/rcifdata/maxhart/data/trackml/prepped/val/
-  test_dir: /share/rcifdata/maxhart/data/trackml/prepped/test/
+  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/train_data
+  val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/val_data
+  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/test_data
+  # test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/train_data
+  # test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/val_data
 
   num_workers: 10
   num_train: -1
@@ -59,12 +62,13 @@ trainer:
   # Training stuff here
   max_epochs: 50
   accelerator: gpu
-  devices: [0, 1]
+  devices: 1
   precision: bf16-mixed
   log_every_n_steps: 1000
   default_root_dir: logs
   gradient_clip_val: 0.1
   enable_progress_bar: True
+  # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694.ckpt
 
   # Specify loggers here
   logger:
@@ -85,7 +89,7 @@ trainer:
       init_args:
         write_inputs: false
         write_outputs: false
-        write_preds: true
+        write_preds: True
         write_targets: false
         write_losses: false
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
