--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
@@ -3,59 +3,64 @@ name: TRK-v0-full
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
 
 data:
-  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/train_setPU200_proccessed_h5
-  val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/train_setPU200_proccessed_h5
-  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/train_setPU200_proccessed_h5
+  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
+  val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
+  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/test_PU200_processed
 
   # hit_eval_train: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_train_data_eval.h5
   # hit_eval_val: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_val_data_eval.h5
   # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
   
-  num_workers: 8
-  num_train: 100
+  num_workers: 10
+  num_train: -1
   num_test: -1
-  num_val: 100
+  num_val: -1
   batch_size: 1  # Start with batch_size=1 to avoid smart batching issues
   use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
   event_max_num_particles: &num_objects 6  # Typically fewer particles per event in muon data
 
-  # Define which inputs will be available to the model
   inputs:
     hit:
       # Global hit coordinates
-      - x
-      - y
-      - z
-      - r
-      - s
-      - phi
-      - theta
-      # Detector information
-      - channel
-      - drift_r
-      - layer
-      - station_phi
-      - station_eta
-      - technology
-      # Covariance information
-      - cov_xx
-      - cov_xy
-      - cov_yy
+      - spacePoint_globEdgeHighX
+      - spacePoint_globEdgeHighY
+      - spacePoint_globEdgeHighZ
+      - spacePoint_globEdgeLowX
+      - spacePoint_globEdgeLowY
+      - spacePoint_globEdgeLowZ
+      - spacePoint_time
+      - spacePoint_driftR
+      # Add covariance information
+      - spacePoint_covXX
+      - spacePoint_covXY
+      - spacePoint_covYX
+      - spacePoint_covYY
+      # Add detector information
+      - spacePoint_channel
+      - spacePoint_layer
+      - spacePoint_stationPhi
+      - spacePoint_stationEta
+      - spacePoint_technology
+      # Add derived hit fields
+      - r  # Radial distance
+      - s  # 3D distance
+      - theta  # Polar angle
+      - phi  # Azimuthal angle
 
   targets:
     # hit:
     #   - on_valid_particle
     particle:
-      - pt
-      - eta
-      - phi
-      - q
+      - truthMuon_pt
+      - truthMuon_eta
+      - truthMuon_phi
+      - truthMuon_q
 
 trainer:
   # Training stuff here
-  max_epochs: 30
+  max_epochs: 50
   accelerator: gpu
   devices: [1]
   precision: bf16-mixed
@@ -122,7 +127,7 @@ model:
   model:
     class_path: hepattn.models.MaskFormer
     init_args:
-      dim: &dim 128
+      dim: &dim 256
       num_queries: *num_objects
       input_sort_field: phi
       input_nets:
@@ -133,30 +138,35 @@ model:
               init_args:
                 input_name: hit
                 fields:
-                 # Global hit coordinates
-                - x
-                - y
-                - z
-                - r
-                - s
-                - phi
-                - theta
-                # Detector information
-                - channel
-                - drift_r
-                - layer
-                - station_phi
-                - station_eta
-                - technology
-                # Covariance information
-                - cov_xx
-                - cov_xy
-                - cov_yy
-                # TODO: Check whether you might want to add more here 
+                  # Global hit coordinates
+                  - spacePoint_globEdgeHighX
+                  - spacePoint_globEdgeHighY
+                  - spacePoint_globEdgeHighZ
+                  - spacePoint_globEdgeLowX
+                  - spacePoint_globEdgeLowY
+                  - spacePoint_globEdgeLowZ
+                  - spacePoint_time
+                  - spacePoint_driftR
+                  # Add covariance information
+                  - spacePoint_covXX
+                  - spacePoint_covXY
+                  - spacePoint_covYX
+                  - spacePoint_covYY
+                  # Add detector information
+                  - spacePoint_channel
+                  - spacePoint_layer
+                  - spacePoint_stationPhi
+                  - spacePoint_stationEta
+                  - spacePoint_technology
+                  # Add derived hit fields
+                  - r  # Radial distance
+                  - s  # 3D distance
+                  - theta  # Polar angle
+                  - phi  # Azimuthal angle
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 16
+                    input_size: 21
                     output_size: *dim
                 posenc:
                   class_path: hepattn.models.FourierPositionEncoder
@@ -170,7 +180,7 @@ model:
       encoder:
         class_path: hepattn.models.Encoder
         init_args:
-          num_layers: 5
+          num_layers: 4
           dim: *dim
           attn_type: flash
           window_size: 256
@@ -178,7 +188,7 @@ model:
           hybrid_norm: true
           norm: RMSNorm
 
-      num_decoder_layers: 4
+      num_decoder_layers: 8
       # intermediate_losses: true
       decoder_layer_config:
         dim: *dim
@@ -222,5 +232,5 @@ model:
       matcher:
         class_path: hepattn.models.matcher.Matcher
         init_args:
-          default_solver: scipy
+          default_solver: 1015_late
           adaptive_solver: true
