--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_event_plotting.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_event_plotting.yaml
@@ -1,16 +1,13 @@
 seed_everything: 42
-name: TRK-v0-full
-# ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
+name: ATLAS-Muon-v1
 
 data:
+  # class_path: hepattn.experiments.atlas_muon.data.AtlasMuonDataModule
+
   train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
   val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
   test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/test_PU200_processed
 
-  # hit_eval_train: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_train_data_eval.h5
-  # hit_eval_val: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_val_data_eval.h5
-  # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
-  
   num_workers: 10
   num_train: -1
   num_test: -1
@@ -19,8 +16,9 @@ data:
   use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
-  event_max_num_particles: &num_objects 6  # Typically fewer particles per event in muon data
+  event_max_num_particles: 6  # Typically fewer tracks per event in muon data
 
+  # Define which inputs will be available to the model
   inputs:
     hit:
       # Global hit coordinates
@@ -48,10 +46,9 @@ data:
       - s  # 3D distance
       - theta  # Polar angle
       - phi  # Azimuthal angle
-
   targets:
-    # hit:
-    #   - on_valid_particle
+    hit:
+      - on_valid_particle
     particle:
       - truthMuon_pt
       - truthMuon_eta
@@ -59,27 +56,21 @@ data:
       - truthMuon_q
 
 trainer:
-  # Training stuff here
+  # Training configuration
   max_epochs: 50
   accelerator: gpu
-  devices: [1]
+  devices: [2]
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
-  gradient_clip_val: 0.1
-  enable_progress_bar: true
-
-  #profiler:
-  #  class_path: lightning.pytorch.profilers.PyTorchProfiler
-  #  init_args:
-  #    dirpath: ./profile_logs/
-  #    filename: profile.json
+  gradient_clip_val: 1.0
+  enable_progress_bar: True
 
   # Specify loggers here
   logger:
     class_path: lightning.pytorch.loggers.CometLogger
     init_args:
-      project: trackml_tracking
+      project: atlas_muon_filtering
 
   callbacks:
     - class_path: hepattn.callbacks.Compile
@@ -87,8 +78,8 @@ trainer:
     - class_path: hepattn.callbacks.SaveConfig
     - class_path: hepattn.callbacks.Checkpoint
       init_args:
-        monitor: val/loss
-        mode: min
+        monitor: val/acc
+        mode: max
         save_top_k: 1
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
@@ -103,32 +94,25 @@ trainer:
         refresh_rate: 50
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val/loss
+        monitor: val/acc
         patience: 15 
         min_delta: 0.0
-        mode: min
-        verbose: True
+        mode: max
+        verbose: True 
 
 model:
   optimizer: Lion
 
-  # Learning rate scheduler config
   lrs_config:
     initial: 1e-5
-    max: 5e-5
-    end: 1e-5
+    max: 3e-5
+    end: 1e-6
     pct_start: 0.05
-    skip_scheduler: false
     weight_decay: 1e-5
 
-  # Whether to use multi task learning or not
-  mtl: false
-
   model:
-    class_path: hepattn.models.MaskFormer
+    class_path: hepattn.models.HitFilter
     init_args:
-      dim: &dim 256
-      num_queries: *num_objects
       input_sort_field: phi
       input_nets:
         class_path: torch.nn.ModuleList
@@ -166,71 +150,38 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 21
-                    output_size: *dim
+                    input_size: 21  # Number of input features for ATLAS muon data
+                    output_size: &dim 256
+                    norm_input: true
                 posenc:
                   class_path: hepattn.models.FourierPositionEncoder
                   init_args:
                     input_name: hit
                     fields:
                       - phi
+                    # TODO: Check wether you might want to add more here
                     dim: *dim
                     scale: 0.1
-
       encoder:
         class_path: hepattn.models.Encoder
         init_args:
-          num_layers: 10
+          num_layers: 8 # Slightly fewer layers for muon data
           dim: *dim
           attn_type: flash
-          window_size: 512
+          window_size: 512  # Smaller window size for fewer hits per event
           window_wrap: true
           hybrid_norm: true
           norm: RMSNorm
-
-      num_decoder_layers: 4
-      # intermediate_losses: true
-      decoder_layer_config:
-        dim: *dim
-        norm: RMSNorm
-        mask_attention: true
 
       tasks:
         class_path: torch.nn.ModuleList
         init_args:
           modules:
-            - class_path: hepattn.models.task.ObjectValidTask
+            - class_path: hepattn.models.task.HitFilterTask
               init_args:
-                name: track_valid
-                input_object: query
-                output_object: track
-                target_object: particle
-                losses:
-                  object_bce: 1.0
-                costs:
-                  object_bce: 1.0
+                name: hit_filter
+                input_object: hit
+                target_field: on_valid_particle
                 dim: *dim
-                null_weight: 1.0
-            - class_path: hepattn.models.task.ObjectHitMaskTask
-              init_args:
-                name: track_hit_valid
-                input_hit: hit
-                input_object: query
-                output_object: track
-                target_object: particle
-                losses:
-                  mask_bce: 100.0
-                  #mask_dice: 2.0
-                  mask_focal: 50.0
-                costs:
-                  mask_bce: 100.0
-                  #mask_dice: 2.0
-                  mask_focal: 50.0
-                dim: *dim
-                null_weight: 1.0
-
-      matcher:
-        class_path: hepattn.models.matcher.Matcher
-        init_args:
-          default_solver: scipy
-          adaptive_solver: true
+                threshold: 0.1
+                loss_fn: bce
