--- a/src/.cometml-runs/config.yaml
+++ b/src/.cometml-runs/config.yaml
@@ -3,7 +3,8 @@ seed_everything: 42
 trainer:
   accelerator: gpu
   strategy: auto
-  devices: 1
+  devices:
+  - 3
   num_nodes: 1
   precision: bf16-mixed
   logger:
@@ -11,7 +12,7 @@ trainer:
     init_args:
       api_key: null
       workspace: null
-      project: trackml_filtering
+      project: atlas_muon_filtering
       experiment_key: null
       mode: null
       online: null
@@ -36,11 +37,11 @@ trainer:
       enable_version_counter: true
   - class_path: hepattn.callbacks.PredictionWriter
     init_args:
-      write_inputs: true
-      write_outputs: true
+      write_inputs: false
+      write_outputs: false
       write_preds: true
-      write_targets: true
-      write_losses: true
+      write_targets: false
+      write_losses: false
       write_layers: null
   - class_path: lightning.pytorch.callbacks.LearningRateMonitor
     init_args:
@@ -79,12 +80,12 @@ trainer:
   val_check_interval: null
   check_val_every_n_epoch: 1
   num_sanity_val_steps: null
-  log_every_n_steps: 1000
+  log_every_n_steps: 50
   enable_checkpointing: null
   enable_progress_bar: true
   enable_model_summary: null
   accumulate_grad_batches: 1
-  gradient_clip_val: 0.1
+  gradient_clip_val: 1.0
   gradient_clip_algorithm: null
   deterministic: null
   benchmark: null
@@ -112,7 +113,7 @@ model:
               net:
                 class_path: hepattn.models.Dense
                 init_args:
-                  input_size: 16
+                  input_size: 21
                   output_size: 256
                   hidden_layers: null
                   hidden_dim_scale: 2
@@ -122,39 +123,42 @@ model:
                   bias: true
                   norm_input: true
               fields:
-              - x
-              - y
-              - z
+              - spacePoint_globEdgeHighX
+              - spacePoint_globEdgeHighY
+              - spacePoint_globEdgeHighZ
+              - spacePoint_globEdgeLowX
+              - spacePoint_globEdgeLowY
+              - spacePoint_globEdgeLowZ
+              - spacePoint_time
+              - spacePoint_driftR
+              - spacePoint_covXX
+              - spacePoint_covXY
+              - spacePoint_covYX
+              - spacePoint_covYY
+              - spacePoint_channel
+              - spacePoint_layer
+              - spacePoint_stationPhi
+              - spacePoint_stationEta
+              - spacePoint_technology
               - r
-              - eta
+              - s
+              - theta
               - phi
-              - u
-              - v
-              - charge_frac
-              - leta
-              - lphi
-              - lx
-              - ly
-              - lz
-              - geta
-              - gphi
               posenc:
                 class_path: hepattn.models.FourierPositionEncoder
                 init_args:
                   input_name: hit
                   dim: 256
                   fields:
-                  - r
-                  - eta
                   - phi
                   scale: 0.1
       encoder:
         class_path: hepattn.models.Encoder
         init_args:
-          num_layers: 10
+          num_layers: 8
           dim: 256
           attn_type: flash
-          window_size: 1024
+          window_size: 512
           window_wrap: true
           score_mod: null
           value_residual: false
@@ -180,55 +184,53 @@ model:
       input_sort_field: phi
   lrs_config:
     initial: 1.0e-05
-    max: 5.0e-05
+    max: 3.0e-05
     end: 1.0e-06
     pct_start: 0.05
     weight_decay: 1.0e-05
   optimizer: Lion
 data:
-  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/train_data
-  val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/val_data
+  train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
+  val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
   num_workers: 10
   num_train: -1
   num_val: -1
   num_test: -1
-  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/cernbox_data/test_data
+  batch_size: 1
+  test_dir: null
   pin_memory: true
-  hit_eval_train: null
-  hit_eval_val: null
-  hit_eval_test: null
+  use_smart_batching: false
+  drop_last: false
+  max_hits_per_batch: 50000
   inputs:
     hit:
-    - x
-    - y
-    - z
+    - spacePoint_globEdgeHighX
+    - spacePoint_globEdgeHighY
+    - spacePoint_globEdgeHighZ
+    - spacePoint_globEdgeLowX
+    - spacePoint_globEdgeLowY
+    - spacePoint_globEdgeLowZ
+    - spacePoint_time
+    - spacePoint_driftR
+    - spacePoint_covXX
+    - spacePoint_covXY
+    - spacePoint_covYX
+    - spacePoint_covYY
+    - spacePoint_channel
+    - spacePoint_layer
+    - spacePoint_stationPhi
+    - spacePoint_stationEta
+    - spacePoint_technology
     - r
     - s
-    - eta
+    - theta
     - phi
-    - u
-    - v
-    - charge_frac
-    - leta
-    - lphi
-    - lx
-    - ly
-    - lz
-    - geta
-    - gphi
   targets:
     hit:
     - on_valid_particle
-  hit_volume_ids:
-  - 7
-  - 8
-  - 9
-  particle_min_pt: 0.9
-  particle_max_abs_eta: 4.0
-  particle_min_num_hits: 3
-  event_max_num_particles: 3000
-name: HC-v3
+  event_max_num_particles: 6
+name: ATLAS-Muon-v1
 optimizer: null
 lr_scheduler: null
 return_predictions: null
-ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694.ckpt
+ckpt_path: /master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=014-val_acc=0.99418.ckpt
