--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking.yaml
@@ -15,8 +15,8 @@ data:
   num_train: -1
   num_test: -1
   num_val: -1
-  batch_size: 1  # Start with batch_size=1 to avoid smart batching issues
-  use_smart_batching: false  # Disable smart batching as requested
+  batch_size: 10  # Start with batch_size=1 to avoid smart batching issues
+  # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
   event_max_num_particles: &num_objects 6  # Typically fewer particles per event in muon data
@@ -62,7 +62,7 @@ trainer:
   # Training stuff here
   max_epochs: 50
   accelerator: gpu
-  devices: [1]
+  devices: [0]
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
@@ -82,7 +82,7 @@ trainer:
       project: atlas_muon_tracking
 
   callbacks:
-    - class_path: hepattn.callbacks.Compile
+    # - class_path: hepattn.callbacks.Compile
     - class_path: hepattn.callbacks.InferenceTimer
     - class_path: hepattn.callbacks.SaveConfig
     - class_path: hepattn.callbacks.Checkpoint
@@ -93,10 +93,11 @@ trainer:
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
         write_inputs: false
-        write_outputs: false
-        write_preds: True
-        write_targets: false
+        write_outputs: true
+        write_preds: true
+        write_targets: true
         write_losses: false
+    - class_path: lightning.pytorch.callbacks.ModelSummary
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
     - class_path: lightning.pytorch.callbacks.TQDMProgressBar
       init_args:
@@ -115,9 +116,9 @@ model:
   # Learning rate scheduler config
   lrs_config:
     initial: 1e-5
-    max: 5e-5
+    max: 2e-5
     end: 1e-5
-    pct_start: 0.05
+    pct_start: 0.01
     skip_scheduler: false
     weight_decay: 1e-5
 
@@ -130,6 +131,9 @@ model:
       dim: &dim 256
       num_queries: *num_objects
       input_sort_field: phi
+      # record_intermediate_embeddings: false
+      use_attn_masks: true
+      use_query_masks: false
       input_nets:
         class_path: torch.nn.ModuleList
         init_args:
@@ -158,7 +162,7 @@ model:
                   - spacePoint_stationPhi
                   - spacePoint_stationEta
                   - spacePoint_technology
-                  # Add derived hit fields
+                  # # Add derived hit fields
                   - r  # Radial distance
                   - s  # 3D distance
                   - theta  # Polar angle
@@ -169,10 +173,13 @@ model:
                     input_size: 21
                     output_size: *dim
                 posenc:
-                  class_path: hepattn.models.FourierPositionEncoder
+                  class_path: hepattn.models.posenc.FourierPositionEncoder
                   init_args:
                     input_name: hit
+                    dim: *dim
                     fields:
+                      - r
+                      # - eta
                       - phi
                     dim: *dim
                     scale: 0.1
@@ -186,15 +193,20 @@ model:
           # window_size: 64
           # window_wrap: true
           # hybrid_norm: true
-          norm: RMSNorm
+          # norm: RMSNorm
 
       num_decoder_layers: 4
       # intermediate_losses: true
       decoder_layer_config:
         dim: *dim
-        norm: RMSNorm
+        # norm: RMSNorm
         mask_attention: true
-
+      matcher:
+        class_path: hepattn.models.matcher.Matcher
+        init_args:
+          default_solver: scipy
+          adaptive_solver: false
+          adaptive_check_interval: 1000
       tasks:
         class_path: torch.nn.ModuleList
         init_args:
@@ -206,11 +218,12 @@ model:
                 output_object: track
                 target_object: particle
                 losses:
-                  object_bce: 1.0
+                  object_bce: 0.1
                 costs:
-                  object_bce: 1.0
+                  object_bce: 10.0
                 dim: *dim
                 null_weight: 1.0
+                mask_queries: false
             - class_path: hepattn.models.task.ObjectHitMaskTask
               init_args:
                 name: track_hit_valid
@@ -219,18 +232,9 @@ model:
                 output_object: track
                 target_object: particle
                 losses:
-                  mask_bce: 100.0
-                  #mask_dice: 2.0
-                  mask_focal: 50.0
+                  mask_bce: 10.0
                 costs:
-                  mask_bce: 100.0
-                  #mask_dice: 2.0
-                  mask_focal: 50.0
+                  mask_bce: 10.0
                 dim: *dim
                 null_weight: 1.0
 
-      matcher:
-        class_path: hepattn.models.matcher.Matcher
-        init_args:
-          default_solver: scipy
-          adaptive_solver: true
