--- a/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking_dummy_test.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/atlas_muon_tracking_dummy_test.yaml
@@ -1,25 +1,27 @@
 seed_everything: 42
-name: ATLAS-Muon-v1
-# ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711.ckpt
-data:
-  # class_path: hepattn.experiments.atlas_muon.data.AtlasMuonDataModule
+name: TRK-v0-full
+# ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
 
-  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
-  # test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
+data:
   train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
   val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
+  test_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/test_PU200_processed
 
+  # hit_eval_train: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=049-val_acc=0.99711_train_PU200_processed_eval.h5
+  # hit_eval_val: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/ATLAS-Muon-v1_20250814-T223545/ckpts/epoch=017-val_acc=0.99449_valid_PU200_processed_eval.h5
+  # hit_eval_test: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/HC-v3_20250622-T103156/ckpts/epoch=046-val_acc=0.96694_test_data_eval.h5
+  
   num_workers: 10
   num_train: -1
-  num_val: -1
   num_test: -1
+  num_val: -1
   batch_size: 10  # Start with batch_size=1 to avoid smart batching issues
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
-  event_max_num_particles: 6  # Typically fewer tracks per event in muon data
+  event_max_num_particles: &num_objects 6  # Typically fewer particles per event in muon data
+  dummy_testing: true
 
-  # Define which inputs will be available to the model
   inputs:
     hit:
       # Global hit coordinates
@@ -41,81 +43,100 @@ data:
       - spacePoint_layer
       - spacePoint_stationPhi
       - spacePoint_stationEta
-      # - spacePoint_stationIndex
       - spacePoint_technology
       # Add derived hit fields
       - r  # Radial distance
       - s  # 3D distance
       - theta  # Polar angle
       - phi  # Azimuthal angle
+
   targets:
-    hit:
-      - on_valid_particle
-    # particle:
-    #   - truthMuon_pt
-    #   - truthMuon_eta
-    #   - truthMuon_phi
-    #   - truthMuon_q
+    # hit:
+    #   - on_valid_particle
+    particle:
+      - truthMuon_pt
+      - truthMuon_eta
+      - truthMuon_phi
+      - truthMuon_q
 
 trainer:
-  # Training configuration
-  max_epochs: 80
+  # Training stuff here
+  max_epochs: 50
   accelerator: gpu
-  devices: [1]
+  devices: [3]
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
-  gradient_clip_val: 1.0
-  enable_progress_bar: True
+  gradient_clip_val: 0.1
+  enable_progress_bar: true
+
+  #profiler:
+  #  class_path: lightning.pytorch.profilers.PyTorchProfiler
+  #  init_args:
+  #    dirpath: ./profile_logs/
+  #    filename: profile.json
 
   # Specify loggers here
   logger:
     class_path: lightning.pytorch.loggers.CometLogger
     init_args:
-      project: atlas_muon_filtering
+      project: atlas_muon_tracking_dummy_testing
+      # experiment_name: validating_dummy_run_gpu3
+      
 
   callbacks:
-    - class_path: hepattn.callbacks.Compile
+    # - class_path: hepattn.callbacks.Compile
     - class_path: hepattn.callbacks.InferenceTimer
     - class_path: hepattn.callbacks.SaveConfig
     - class_path: hepattn.callbacks.Checkpoint
       init_args:
-        monitor: val/acc
-        mode: max
+        monitor: val/loss
+        mode: min
         save_top_k: 1
     - class_path: hepattn.callbacks.PredictionWriter
       init_args:
         write_inputs: false
-        write_outputs: false
-        write_preds: True
-        write_targets: false
+        write_outputs: true
+        write_preds: true
+        write_targets: true
         write_losses: false
+    - class_path: lightning.pytorch.callbacks.ModelSummary
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
     - class_path: lightning.pytorch.callbacks.TQDMProgressBar
       init_args:
         refresh_rate: 50
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val/acc
+        monitor: val/loss
         patience: 15 
         min_delta: 0.0
-        mode: max
-        verbose: True 
+        mode: min
+        verbose: True
 
 model:
   optimizer: Lion
 
+  # Learning rate scheduler config
   lrs_config:
     initial: 1e-5
     max: 5e-5
-    end: 1e-6
+    end: 1e-5
     pct_start: 0.05
+    skip_scheduler: false
     weight_decay: 1e-5
 
+  # Whether to use multi task learning or not
+  mtl: false
+
   model:
-    class_path: hepattn.models.HitFilter
+    class_path: hepattn.models.MaskFormer
     init_args:
+      dim: &dim 256
+      num_queries: *num_objects
       input_sort_field: phi
+      # record_intermediate_embeddings: false
+      use_attn_masks: true
+      use_query_masks: false
       input_nets:
         class_path: torch.nn.ModuleList
         init_args:
@@ -144,7 +165,7 @@ model:
                   - spacePoint_stationPhi
                   - spacePoint_stationEta
                   - spacePoint_technology
-                  # Add derived hit fields
+                  # # Add derived hit fields
                   - r  # Radial distance
                   - s  # 3D distance
                   - theta  # Polar angle
@@ -152,38 +173,71 @@ model:
                 net:
                   class_path: hepattn.models.Dense
                   init_args:
-                    input_size: 21  # Number of input features for ATLAS muon data
-                    output_size: &dim 256
-                    norm_input: true
+                    input_size: 21
+                    output_size: *dim
                 posenc:
-                  class_path: hepattn.models.FourierPositionEncoder
+                  class_path: hepattn.models.posenc.FourierPositionEncoder
                   init_args:
                     input_name: hit
+                    dim: *dim
                     fields:
+                      - r
+                      # - eta
                       - phi
-                    # TODO: Check wether you might want to add more here
                     dim: *dim
                     scale: 0.1
+
       encoder:
         class_path: hepattn.models.Encoder
         init_args:
-          num_layers: 8 # Slightly fewer layers for muon data
+          num_layers: 8
           dim: *dim
-          attn_type: flash
-          window_size: 512  # Smaller window size for fewer hits per event
-          window_wrap: true
-          hybrid_norm: true
-          norm: RMSNorm
+          attn_type: flash-varlen
+          # window_size: 64
+          # window_wrap: true
+          # hybrid_norm: true
+          # norm: RMSNorm
 
+      num_decoder_layers: 4
+      # intermediate_losses: true
+      decoder_layer_config:
+        dim: *dim
+        # norm: RMSNorm
+        mask_attention: true
+      matcher:
+        class_path: hepattn.models.matcher.Matcher
+        init_args:
+          default_solver: scipy
+          adaptive_solver: false
+          adaptive_check_interval: 1000
       tasks:
         class_path: torch.nn.ModuleList
         init_args:
           modules:
-            - class_path: hepattn.models.task.HitFilterTask
+            - class_path: hepattn.models.task.ObjectValidTask
               init_args:
-                name: hit_filter
-                input_object: hit
-                target_field: on_valid_particle
+                name: track_valid
+                input_object: query
+                output_object: track
+                target_object: particle
+                losses:
+                  object_bce: 0.1
+                costs:
+                  object_bce: 10.0
                 dim: *dim
-                threshold: 0.1
-                loss_fn: bce
+                null_weight: 1.0
+                mask_queries: false
+            - class_path: hepattn.models.task.ObjectHitMaskTask
+              init_args:
+                name: track_hit_valid
+                input_hit: hit
+                input_object: query
+                output_object: track
+                target_object: particle
+                losses:
+                  mask_bce: 10.0
+                costs:
+                  mask_bce: 10.0
+                dim: *dim
+                null_weight: 1.0
+
