--- a/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/atlas_muon_filtering_NGT.yaml
@@ -10,15 +10,15 @@ data:
   # train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/ml_training_data_multi_processed
   # train_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/train_PU200_processed
   # val_dir: /home/iwsatlas1/jrenusch/master_thesis/tracking/data/root/valid_PU200_processed
-  train_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_training_data_1_2Mio_processed
-  val_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_validation_data_150K_processed
+  train_dir: /shared/tracking/data/ml_training_data_1_2Mio_processed
+  val_dir: /shared/tracking/data/ml_validation_data_150K_processed
   test_dir: /eos/user/j/jorenusc/tracking/data_gen/ml_test_data_150K_processed
 
-  num_workers: 100
+  num_workers: 200
   num_train: -1
   num_val: -1
   num_test: -1
-  batch_size: 20
+  batch_size: 40
   # use_smart_batching: false  # Disable smart batching as requested
 
   # ATLAS muon data parameters
@@ -66,7 +66,7 @@ trainer:
   # Training configuration
   max_epochs: 80
   accelerator: gpu
-  devices: [1]
+  devices: -1
   precision: bf16-mixed
   log_every_n_steps: 50
   default_root_dir: logs
